--- a/ConwyCastleSiege/src/main/resources/kits.yml
+++ b/ConwyCastleSiege/src/main/resources/kits.yml
@@ -188,7 +188,7 @@ premium:
         - "§2[Ability]:§a Speed 2, huge damage boost, Nausea 2"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 10
       command: "berserker"
     vanguard:
@@ -204,7 +204,7 @@ premium:
         - "§2[Ability]:§a Charge at high speed and deal more damage on impact."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 12
       command: "vanguard"
     executioner:
@@ -219,7 +219,7 @@ premium:
         - "§2[Ability]:§a Insta-kills enemies that are below 40% hp."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
       location: 14
       command: "executioner"
     maceman:
@@ -235,7 +235,7 @@ premium:
         - "§2[Ability]:§a causing you to stun them."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
       location: 16
       command: "maceman"
     viking:
@@ -251,7 +251,7 @@ premium:
         - "§2[Ability]:§a Deals % of max health"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 28
       command: "viking"
     halberdier:
@@ -267,7 +267,7 @@ premium:
         - "§2[Ability]:§a Deals 50% more damage to mounted units."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 37
       command: "halberdier"
     medic:
@@ -284,7 +284,7 @@ premium:
         - "§2[Ability]:§a Can place cakes on the ground to heal allies."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &95"
+        - "§3Battlepoints: §95"
       location: 30
       command: "medic"
     engineer:
@@ -301,7 +301,7 @@ premium:
         - "§2[Ability]:§a structures, refill catapults, and operate ballistae."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 39
       command: "engineer"
     ranger:
@@ -320,7 +320,7 @@ premium:
         - "§2[Ability]:§a Can insta-kill enemies by backstabbing them."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 32
       command: "ranger"
     crossbowman:
@@ -337,7 +337,7 @@ premium:
         - "§2[Ability]:§a Shoots arrows in a straight line."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 41
       command: "crossbowman"
     cavalry:
@@ -353,7 +353,7 @@ premium:
         - "§2[Ability]:§a Kick ability does AOE damage."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 34
       command: "cavalry"
     warhound:
@@ -369,7 +369,7 @@ premium:
         - "§2[Ability]:§a immobilise enemies and wither."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
       location: 43
       command: "warhound"
     alchemist:
@@ -386,7 +386,7 @@ premium:
         - "§2[Ability]:§a and can brew random damage/support potions."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
       location: 22
       command: "alchemist"
     back:
@@ -413,7 +413,7 @@ rohan:
         - "§2[Ability]:§a Spears can be thrown by right-clicking."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §2Rohan"
       location: 21
@@ -430,7 +430,7 @@ rohan:
         - "§2[Ability]:§a Right click the wheat to mount your horse."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §2Rohan"
       location: 23
@@ -459,7 +459,7 @@ uruk-hai:
         - "§2[Ability]:§a to all enemies in a 2 block radius."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
         - "§5MAP: Helm's Deep"
         - "§5TEAM: §8Uruk-Hai"
       location: 22
@@ -488,7 +488,7 @@ burning_legion:
         - "§2[Ability]:§a a magma projectile that fires over time."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
         - "§5MAP: Firelands"
         - "§5TEAM: §aBurning Legion"
       location: 22
@@ -511,7 +511,7 @@ hellfire_guards:
         - "§2[Ability]:§a Carry around teammates."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &95"
+        - "§3Battlepoints: §95"
         - "§5MAP: Firelands"
         - "§5TEAM: §5Hellfire Guards"
       location: 22
@@ -533,7 +533,7 @@ tomb_guardians:
         - "§2[Ability]:§a You deal wither damage on cooldown."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &95"
+        - "§3Battlepoints: §95"
         - "§5MAP: Royal Crypts"
         - "§5TEAM: §fTomb Guardians"
       location: 22
@@ -560,7 +560,7 @@ orc:
         - "§2[Regen]:§a 7"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &95"
+        - "§3Battlepoints: §95"
         - "§5MAP: Moria"
         - "§5TEAM: §2The Orcs"
       location: 20
@@ -578,7 +578,7 @@ orc:
         - "§2[Ability]:§a Gives weakness and Fatigue on hit."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Moria"
         - "§5TEAM: §2The Orcs"
       location: 22
@@ -596,7 +596,7 @@ orc:
         - "§2[Ability]:§a Can pick up and throw enemies."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Moria"
         - "§5TEAM: §2The Orcs"
       location: 24
@@ -625,7 +625,7 @@ dwarves:
         - "§2[Ability]:§a Can throw axes really fast"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
         - "§5MAP: Moria"
         - "§5TEAM: §6The Dwarves"
       location: 20
@@ -643,7 +643,7 @@ dwarves:
         - "§2[Ability]:§a Gets buffs when shot whilst shielding."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Moria"
         - "§5TEAM: §6The Dwarves"
       location: 22
@@ -661,7 +661,7 @@ dwarves:
         - "§2[Ability]:§a Throws multiple spears at once."
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
-        - "&3Battlepoints: &98"
+        - "§3Battlepoints: §98"
         - "§5MAP: Moria"
         - "§5TEAM: §6The Dwarves"
       location: 24
@@ -689,7 +689,7 @@ english:
         - "§2[Ability]:§a Can spawn a royal steed!"
         - "§2[Status]:§a Unlocked with coins."
         - "§4------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Conwy"
         - "§5TEAM: §4The English"
       location: 21
@@ -707,7 +707,7 @@ english:
         - "§2[Ability]:§a Slower Xbow with stronger arrows."
         - "§2[Status]:§a Unlocked with coins."
         - "§4------------------------------"
-        - "&3Battlepoints: &910"
+        - "§3Battlepoints: §910"
         - "§5MAP: Conwy"
         - "§5TEAM: §4The English"
       location: 23
@@ -737,6 +737,7 @@ thunderstoneGuard:
         - "§2[Weakness]:§a Can't capture flags!"
         - "§2[Status]:§a Unlocked with coins."
         - "§6------------------------------"
+        - "§3Battlepoints: §93"
         - "§5MAP: Thunderstone"
         - "§5TEAM: §6Thunderstone Guard"
       location: 22
