Added command to check battlepoint multiplier and all new staff battlepoint commands to the plugin.yml

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -141,6 +141,16 @@ commands:
       - bp
       - battlep
       - bpoints
+  BattlepointMultiplier:
+    description: Shows the active coin multiplier
+    usage: /battlepointmultiplier
+    aliases:
+      - bpmultiplier
+      - bpmult
+      - battlepmult
+      - battlepmultiplier
+      - bpointsmult
+      - bpointsmultiplier
   CoinMultiplier:
     description: Shows the active coin multiplier
     usage: /coinmultiplier
@@ -222,7 +232,7 @@ commands:
     aliases:
       - topbounty
 
-  # Staff - Coins
+  # Staff - Currencies
   AddCoins:
     description: Add to a player's coins
     usage: /addcoins <player> <amount>
@@ -243,6 +253,46 @@ commands:
     usage: /takecoins <player> <amount>
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
+  # Staff - Currencies
+  AddBattlepoints:
+    description: Add to a player's battlepoints
+    usage: /addbattlepoints <player> <amount>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+    aliases:
+      - addbp
+      - addbattlep
+      - addbpoints
+  SetBattlepoints:
+    description: Sets a player's battlepoints
+    usage: /setbattlepoints <player> <amount>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+    aliases:
+      - setbp
+      - setbattlep
+      - setbpoints
+  SetBattlepointMultiplier:
+    description: Sets the active battlepoint multiplier
+    usage: /setbattlepointmultiplier <multiplier>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+    aliases:
+      - setbpmultiplier
+      - setbpmult
+      - setbattlepmult
+      - setbattlepmultiplier
+      - setbpointsmult
+      - setbpointsmultiplier
+  TakeBattlepoints:
+    description: Take from a player's battlepoints
+    usage: /takebattlepoints <player> <amount>
+    permission: castlesiege.moderator
+    permission-message: You are not permitted to use this command!
+    aliases:
+      - takebp
+      - takebattlep
+      - takebpoints
 
 
   # Staff - Punishments
