Modified some permissions and added GrantBooster command (can't be bothered to separate the permission changes, but will revert as required)

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -256,7 +256,7 @@ commands:
   AddBattlepoints:
     description: Add to a player's battlepoints
     usage: /addbattlepoints <player> <amount> [verbose]
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
     aliases:
       - addbp
@@ -265,7 +265,7 @@ commands:
   SetBattlepoints:
     description: Sets a player's battlepoints
     usage: /setbattlepoints <player> <amount> [verbose]
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
     aliases:
       - setbp
@@ -274,7 +274,7 @@ commands:
   SetBattlepointMultiplier:
     description: Sets the active battlepoint multiplier
     usage: /setbattlepointmultiplier <multiplier>
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
     aliases:
       - setbpmultiplier
@@ -286,13 +286,21 @@ commands:
   TakeBattlepoints:
     description: Take from a player's battlepoints
     usage: /takebattlepoints <player> <amount> [verbose]
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
     aliases:
       - takebp
       - takebattlep
       - takebpoints
 
+  # Staff - Boosters
+  GrantBooster:
+    description: Grants a booster to a player
+    usage: /grantbooster <player> <type> <duration> [other_args]
+    permission: castlesiege.moderator
+    permission-message: You are now permitted to use this command!
+    aliases:
+      - grantboost
 
   # Staff - Punishments
   Ban:
@@ -375,7 +383,7 @@ commands:
   SetKitLimit:
     description: Sets the player limit per team for a kit
     usage: /setkitlimit <kit> <limit>
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
   SetMap:
     description: Skips to the specified map in the rotation
@@ -399,7 +407,7 @@ commands:
     permission: castlesiege.chatmod
     permission-message: You are not permitted to use this command!
   ToggleFree:
-    description: Disables/Enables non-forceful switching
+    description: Disables/Enables free kits
     usage: /togglefree [true/false]
     permission: castlesiege.moderator
     permission-message: You are not permitted to use this command!
@@ -418,7 +426,7 @@ commands:
   ToggleSwitching:
     description: Disables/Enables non-forceful switching
     usage: /toggleswitching [true/false]
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
   Start:
     description: Ends the current timer phase
@@ -432,7 +440,7 @@ commands:
   ToggleForcedRandom:
     description: Disables/Enables forced randomDeath setting
     usage: /toggleforcedrandom [true/false]
-    permission: castlesiege.moderator
+    permission: castlesiege.chatmod+
     permission-message: You are not permitted to use this command!
     aliases:
       - togglerandom
