--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -392,7 +392,7 @@ commands:
   SetMap:
     description: Skips to the specified map in the rotation
     usage: /setmap <map name>
-    permission: castlesiege.moderator
+    permission: castlesiege.developer
     permission-message: You are not permitted to use this command!
   SetTimer:
     description: Sets the time left on the map to the specified time
