Added more stuff for a chef. Currently doesn't heal players in a region, nor grants food

--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -489,6 +489,9 @@ commands:
   Cavalry:
     description: Selects the cavalry kit
     usage: /cavalry
+  Chef:
+    description: Selects the chef kit
+    usage: /chef
   CryptsFallen:
     description: Selects the Fallen kit for Royal Crypts as Tomb Guardians
     usage: /cryptsfallen
