--- a/ConwyCastleSiege/src/main/resources/plugin.yml
+++ b/ConwyCastleSiege/src/main/resources/plugin.yml
@@ -498,6 +498,9 @@ commands:
   Crossbowman:
     description: Selects the crossbowman kit
     usage: /crossbowman
+  ConwyLongbowman:
+    description: Selects the Conwy longbowman kit for the Rebellion
+    usage: /ConwyLongbowman
   ConwyRoyalKnight:
     description: Selects the Conwy royal knight kit for the English
     usage: /conwyroyalknight
@@ -531,6 +534,12 @@ commands:
   HelmsdeepLancer:
     description: Selects the Lancer kit on Helm's Deep
     usage: /helmsdeeplancer
+  HommetLongbowman:
+    description: Selects the Longbowman kit on Hommet
+    usage: /HommetLongbowman
+  HommetAxeman:
+    description: Selects the Axeman kit on Hommet
+    usage: /HommetAxeman
   HelmsdeepRangedCavalry:
     description: Selects the Ranged Cavalry kit on Helm's Deep
     usage: /helmsdeeprangedcavalry
