--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -477,6 +477,9 @@ commands:
   Halberdier:
     description: Selects the halberdier kit
     usage: /halberdier
+  Hypaspist:
+    description: Selects the hypaspist kit
+    usage: /Hypaspist
   HelmsdeepBerserker:
     description: Selects the Berserker kit on Helm's Deep
     usage: /helmsdeepberserker
